# crunchit

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/: run.sh
bench/images/: README.txt
src/: convert.rs  main.rs  stats.rs
src/formats/: gif.rs  jpeg.rs  mod.rs  png.rs  svg.rs  webp.rs
tests/: heic.rs  smoke.rs
