[package]
name = "crunchit"
version = "0.2.1"
edition = "2024"
description = "Fast image optimizer and WebP/AVIF converter — optimizes PNG/JPEG/GIF/SVG/WebP in place and generates variants up to 97% smaller. One static binary."
license = "MIT"
repository = "https://github.com/artisenalcode/crunchit"
readme = "README.md"
keywords = ["image", "optimization", "png", "jpeg", "svg"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gif = "0.14.1"
human_bytes = "0.4.3"
image = "0.25.10"
indicatif = "0.18.4"
libheif-rs = { version = "0.22", optional = true }
oxipng = "10.1.0"
oxvg_ast = { version = "0.0.5", features = ["roxmltree"] }
oxvg_diagnostics = "0.0.1-alpha.1"
oxvg_optimiser = "0.0.5"
oxvg_parse = "0.0.5"
oxvg_path = "0.0.5"
oxvg_serialize = "0.0.5"
ravif = { version = "0.13.0", default-features = false, features = ["threading"] }
rayon = "1.11.0"
rgb = "0.8.53"
walkdir = "2.5.0"
webp = "0.3.1"
webp-animation = "0.10.0"

[dev-dependencies]
tempfile = "3"

[features]
mozjpeg = []
# ~15% less CPU for AVIF encoding; requires the nasm assembler at build time.
asm = ["ravif/asm"]
# HEIC/HEIF input (iPhone photos); requires system libheif at build and run time.
heic = ["dep:libheif-rs"]

[[test]]
name = "heic"
required-features = ["heic"]
